--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <ul id="todo-list"></ul>
 
-    <audio id="miaou" src="miaou.mp3" preload="auto"></audio>
+  <audio id="miaou" src="assets/miaou.mp3" preload="auto"></audio>
   </div>
 
   <script src="script.js"></script>
