--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Todo Liste</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="assets/icone.png" />
 </head>
 <body>
   <div class="container">
