--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Todo Liste</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/png" href="assets/icone.png" />
+  <link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="container">
